  * data/output/manual-references:
    + [NT] Refresh with Policy 3.9.4.
  * data/shared-libs/ldconfig-dirs:
    + [NT] Add libx32 and usr/libx32 used by some gcc x32 bi-arch
      packages.

  * debian/rules:
    + [NT] Include the new Tutorial pods in the "api-doc" target.

  * doc/tutorial/Lintian/Tutorial{/WritingChecks}.pod:
    + [NT] Add POD tutorial on writing checks.

  * frontend/lintian:
    + [NT] Remove "make-shift" lab-query support now that
      Lintian::Lab supports it.
    + [NT] Add new command line option "--[no-]user-dirs" to disable
      loading from $HOME/.lintian{rc,/} and /etc/lintian{rc,/}.

  * lib/Lintian/Collect.pm:
    + [NT] Add "is_non_free" method to easily check of a given
      package appears to be non-free.
  * lib/Lintian/Collect/Binary.pm:
    + [NT] Re-instate the "TEXTREL" marker.  This fixes a regression
      where shared-libs compiled without pic was not reported.
      Thanks to Dmitry Shachnev for the assistance in debugging this.
  * lib/Lintian/Command/Simple.pm:
    + [NT] Use constant time lookup access instead of linear scan with
      "hashref" wait.
  * lib/Lintian/Lab.pm:
    + [NT] Add lab_query method to handle lab-queries directly.
  * lib/Lintian/Lab{,/Manifest}.pm:
    + [NT] Add support for grouping of manifests.
  * lib/Lintian/Lab/Manifest.pm:
    + [NT] Fix an error in visit_all when sufficient keys for an
      exact look up was given.
  * lib/Lintian/Processable.pm:
    + [NT] Fix issue where packages loaded from the lab indices would
      sometimes get a wrong source-version.
  * lib/Lintian/Relation/Version.pm:
    + [NT] Add and export "versions_comparator" that can be used for
      sorting purposes.
  * lib/Lintian/Util.pm:
    + [NT] Reject partially signed Deb822 files.  Most Deb822 files
      are not signed at all; but those that are should be completely
      covered by a signature.  (Closes: #696230)

  * private/refresh-locale-codes: